--- a/front/signIn/signIn.html
+++ b/front/signIn/signIn.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="./signUp.js" defer></script>
+    <link rel="stylesheet" href="./signIn.css">
+    <script src="./signIn.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
@@ -19,18 +19,12 @@
                 </div>
                 <div class="titleGroup">
                     <span class="title">
-                        Sign up
+                        Login
                     </span>
-                    <span>
-                        Don't have an account? <a href="../signIn/signIn.html" class="blue">Log in</a>
-                    </span>
+
                 </div>
                 <form>
                     <div class="inputGroup">
-                        <div class="fulName">
-                            <span class="title">Full name</span>
-                            <input class="name" type="text" placeholder="Full Name" required>
-                        </div>
                         <div class="emailAddress">
                             <span class="title">Email address</span>
                             <input class="email" type="email" placeholder="Email Address" required>
@@ -48,7 +42,7 @@
                         </div>
                     </div>
                     <div class="signUpBtn">
-                        <button>Sign up</button>
+                        <button>Login</button>
                     </div>
                 </form>
 
