Сделала на 50% LOGON SIGN UP , и на 6% главную страницу

--- a/front/login/login.html
+++ b/front/login/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <div class="signUp">
+    <div class="login">
         <div class="container">
             <div class="firstgroup">
                 <div class="logo">
@@ -16,17 +16,13 @@
                 </div>
                 <div class="titleGroup">
                     <span class="title">
-                        Sign up
+                        Login
                     </span>
                     <span>
                         Don't have an account? <span class="blue">Log in</span>
                     </span>
                 </div>
                 <div class="inputGroup">
-                    <div class="fulName">
-                        <span class="title">Full name</span>
-                        <input type="text" placeholder="Full Name" value="Robert Martine">
-                    </div>
                     <div class="emailAddress">
                         <span class="title">Email address</span>
                         <input type="text" placeholder="Email Address" value="Robertmartine@gmail.com">
@@ -45,12 +41,12 @@
                         <a href="#">Forget Password?</a>
                     </div>
                 </div>
-                <div class="signUpBtn">
-                    <span>Sign up</span>
+                <div class="logInBtn">
+                    <span>Log in</span>
                 </div>
             </div>
             <div class="secondGroup">
-                <img src="../img/png/Login.png" alt="banner">
+                <img src="../img/png/lapshaFull.png" alt="banner">
             </div>
         </div>
     </div>
