--- a/front/homePage/homePage.html
+++ b/front/homePage/homePage.html
@@ -8,23 +8,58 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    
-    <div class="header">
-        <div class="logo">
-            <img src="../img/svg/LogoDeliziosoFull.svg" alt="">
+    <div class="container">
+        <div class="header">
+            <div class="logo">
+                <img src="../img/svg/LogoDeliziosoFull.svg" alt="">
+            </div>
+            <div class="header-menu">
+                <ul>
+                    <li><span>Home</span></li>
+                    <li><span>Menu</span></li>
+                    <li><span>About us</span></li>
+                    <li><span>Order online</span></li>
+                    <li><span>Reservation</span></li>
+                    <li><span>Contact us</span></li>
+                </ul>
+            </div>
+            <div class="leftGroup">
+                <div class="cart">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5.5 5.92H19.7558C20.3947 5.92 20.8698 6.51108 20.7324 7.13511L19.6915 11.8604C19.2876 13.6941 17.6628 15 15.7852 15H9.54507C8.07693 15 6.82447 13.9375 6.58518 12.489L5.5 5.92ZM5.5 5.92L4.96302 4.35201C4.68606 3.54329 3.92573 3 3.0709 3H3"  stroke-width="1.5" stroke-linecap="round"/>
+                        <path d="M18 18H7.5C6.67157 18 6 17.3284 6 16.5V16.5C6 15.6716 6.67157 15 7.5 15H10"  stroke-width="1.5" stroke-linecap="round"/>
+                        <circle cx="8" cy="20" r="1.25"  stroke-width="1.5"/>
+                        <circle cx="16" cy="20" r="1.25"  stroke-width="1.5"/>
+                        </svg>
+                </div>
+                <div class="logInbtnHome">
+                    <span>Log in</span>
+                </div>
+            </div>
         </div>
-        <div class="header-menu">
-            <ul>
-                <li><span>Home</span></li>
-                <li><span>Menu</span></li>
-                <li><span>About us</span></li>
-                <li><span>Order online</span></li>
-                <li><span>Reservation</span></li>
-                <li><span>Contact us</span></li>
-            </ul>
-        </div>
-        <div class="cart">
-            <img src="../img/svg/Cart.svg" alt="">
+        <div class="baner">
+            <div class="groupText">
+                <div class="stiker">
+                    <span>Restauran</span>
+                </div>
+                <div class="title">
+                    <span>Italian Cuisine</span>
+                </div>
+                <div class="desc">
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sodales senectus dictum arcu sit tristique donec eget.</span>
+                </div>
+                <div class="groupBtn">
+                    <div class="btnOrder">
+                        <span>Order now</span>
+                    </div>
+                    <div class="btnReserv">
+                        <span>Reservation</span>
+                    </div>
+                </div>
+                <div class="imgBanner">
+                    <img src="../img/png/Illustration.png" alt="">
+                </div>
+            </div>
         </div>
     </div>
 </body>
