--- a/front/homePage/homePage.html
+++ b/front/homePage/homePage.html
@@ -56,8 +56,24 @@
                         <span>Reservation</span>
                     </div>
                 </div>
-                <div class="imgBanner">
-                    <img src="../img/png/Illustration.png" alt="">
+            </div>
+            <div class="imgBanner">
+                <img src="../img/png/Illustration.png" alt="">
+            </div>
+        </div>
+        <div class="menu">
+            <div class="group">
+                <div class="imageMenu">
+                    <img src="../img/png/245.png" alt="">
+                </div>
+                <div class="groupText">
+                    <div class="title">Welcome to <div class="orange">delizioso</div></div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis ultricies at eleifend proin. Congue nibh nulla malesuada ultricies nec quam 
+                    </div>
+                    <div class="btn">
+                        See our menu
+                    </div>
                 </div>
             </div>
         </div>
