--- a/front/homePage/homePage.html
+++ b/front/homePage/homePage.html
@@ -61,6 +61,226 @@
                 </div>
             </div>
         </div>
+
+        <div class="menu">
+            <div class="title">Our popular menu</div>
+            <div class="catagory">
+                <span>All catagory</span>
+                <span>Dinner</span>
+                <span>Lunch</span>
+                <span>Dessert</span>
+                <span>Drink</span>
+            </div>
+            <div class="menuCatalog">
+                <div class="item">
+                    <div class="imagge">
+                        <img src="../img/png/kisspng-italian-cuisine-pizza-naporitan-spaghetti-alla-put-top-view-spaghetti-bolognese-5add123c2c5952 2.png" alt="">
+                    </div>
+                    <div class="title">
+                        Spaghetti
+                    </div>
+                    <div class="stars">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                    </div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas consequat mi eget auctor aliquam, diam. 
+                    </div>
+                    <div class="priceOrder">
+                        <div class="price">$12.05</div>
+                        <div class="btnOrder">
+                            Order now
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="imagge">
+                        <img src="../img/png/kisspng-italian-cuisine-pizza-naporitan-spaghetti-alla-put-top-view-spaghetti-bolognese-5add123c2c5952 2.png" alt="">
+                    </div>
+                    <div class="title">
+                        Spaghetti
+                    </div>
+                    <div class="stars">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                    </div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas consequat mi eget auctor aliquam, diam. 
+                    </div>
+                    <div class="priceOrder">
+                        <div class="price">$12.05</div>
+                        <div class="btnOrder">
+                            Order now
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="imagge">
+                        <img src="../img/png/kisspng-italian-cuisine-pizza-naporitan-spaghetti-alla-put-top-view-spaghetti-bolognese-5add123c2c5952 2.png" alt="">
+                    </div>
+                    <div class="title">
+                        Spaghetti
+                    </div>
+                    <div class="stars">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                    </div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas consequat mi eget auctor aliquam, diam. 
+                    </div>
+                    <div class="priceOrder">
+                        <div class="price">$12.05</div>
+                        <div class="btnOrder">
+                            Order now
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="imagge">
+                        <img src="../img/png/kisspng-italian-cuisine-pizza-naporitan-spaghetti-alla-put-top-view-spaghetti-bolognese-5add123c2c5952 2.png" alt="">
+                    </div>
+                    <div class="title">
+                        Spaghetti
+                    </div>
+                    <div class="stars">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                    </div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas consequat mi eget auctor aliquam, diam. 
+                    </div>
+                    <div class="priceOrder">
+                        <div class="price">$12.05</div>
+                        <div class="btnOrder">
+                            Order now
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="imagge">
+                        <img src="../img/png/kisspng-italian-cuisine-pizza-naporitan-spaghetti-alla-put-top-view-spaghetti-bolognese-5add123c2c5952 2.png" alt="">
+                    </div>
+                    <div class="title">
+                        Spaghetti
+                    </div>
+                    <div class="stars">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                    </div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas consequat mi eget auctor aliquam, diam. 
+                    </div>
+                    <div class="priceOrder">
+                        <div class="price">$12.05</div>
+                        <div class="btnOrder">
+                            Order now
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="imagge">
+                        <img src="../img/png/kisspng-italian-cuisine-pizza-naporitan-spaghetti-alla-put-top-view-spaghetti-bolognese-5add123c2c5952 2.png" alt="">
+                    </div>
+                    <div class="title">
+                        Spaghetti
+                    </div>
+                    <div class="stars">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                        <img src="../img/svg/Star 1.svg" alt="">
+                    </div>
+                    <div class="desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas consequat mi eget auctor aliquam, diam. 
+                    </div>
+                    <div class="priceOrder">
+                        <div class="price">$12.05</div>
+                        <div class="btnOrder">
+                            Order now
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="next">
+                <div class="itemPrev">
+                    <img src="../img/svg/Rectangle 8-1.svg" alt="">
+                </div>
+                <div class="numbers">1</div>
+                <div class="numbers">2</div>
+                <div class="numbers">3</div>
+                <div class="tRy">
+                    <img src="../img/svg/Group 7.svg" alt="">
+                </div>
+                <div class="itemNext">
+                    <img src="../img/svg/Rectangle 8.svg" alt="">
+                </div>
+            </div>
+        </div>
+        
+        <div class="reserve">
+            <div class="imaggge">
+                <img src="../img/png/Picture.png" alt="">
+            </div>
+            <div class="groupText">
+                <div class="title">Let's reserve 
+                    <div class="orange">a table</div>
+                </div>
+                <div class="desc">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis ultricies at eleifend proin. Congue nibh nulla malesuada ultricies nec quam 
+                </div>
+                <div class="btnReserve">
+                    Reservation
+                </div>
+            </div>
+        </div>
+
+        <div class="chef">
+            <div class="title">
+                Our greatest chef
+            </div>
+            <div class="groupChef">
+                <div class="item">
+                    <div class="img">
+                        <img src="../img/png/image 1.png" alt="">
+                    </div>
+                    <div class="name">Betran Komar</div>
+                    <div class="work">Head chef</div>
+                </div>
+                <div class="item">
+                    <div class="img">
+                        <img src="../img/png/image 3.png" alt="">
+                    </div>
+                    <div class="name">Ferry Sauwi</div>
+                    <div class="work">Chef</div>
+                </div>
+                <div class="item">
+                    <div class="img">
+                        <img src="../img/png/image 2.png" alt="">
+                    </div>
+                    <div class="name">Iswan Dracho</div>
+                    <div class="work">Chef</div>
+                </div>
+            </div>
+            <div class="btnView">
+                View all
+            </div>
+        </div>
     </div>
 </body>
 </html>
