--- a/front/menu/menu.html
+++ b/front/menu/menu.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Delizioso Menu</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <script src="./menu.js" defer></script>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body class="bg-gray-50">
 
@@ -32,7 +33,7 @@
       <button class="bg-green-500 rounded-full px-10 py-3 text-white hover:bg-green-600 transition">
         Log in
       </button>
-      <button class="bg-[#FF8A00] rounded-full px-6 py-3 text-white   admin">
+      <button class="bg-[#FF8A00] rounded-full px-6 py-3 text-white cursor-pointer admin">
         Admin Panel
       </button>
     </div>
@@ -51,9 +52,9 @@
     <button class="bg-[#D0CCC7] rounded-full px-8 py-4 font-semibold">Drink</button>
   </div>
 
-  <!-- Dishes Grid -->
-  <div class="allFoods max-w-7xl mx-auto px-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mb-10">
-  
+  <div class="allFoods max-w-7xl mx-auto px-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mb-10 ">
+    
+    
   </div>
 
 
