--- a/front/menu/menu.html
+++ b/front/menu/menu.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <script src="./menu.js" defer></script>
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body class="bg-gray-50">
 
@@ -66,5 +67,66 @@
     <span class="px-4 py-2">...</span>
     <button class="px-4 py-2 bg-gray-400 text-gray-700 rounded"> &gt; </button>
   </div>
+
+  <footer class="footer">
+    <div class="together">
+        <div class="firstGroup">
+            <div class="logo">
+                <img src="../img/svg/LogoDeliziosoWhite.svg" alt="">
+            </div>
+            <div class="desc">
+                Viverra gravida morbi egestas facilisis tortor netus non duis tempor. 
+            </div>
+            <div class="social">
+                <div class="twitter">
+                    <img src="../img/svg/twitter.svg" alt="">
+                    </div>
+                <div class="inst">
+                    <img src="../img/svg/instagram.svg" alt="">     
+                </div>
+                <div class="Fakebo">
+                    <img src="../img/svg/facebook.svg" alt="">                         
+                </div>
+            </div>
+        </div>
+        <div class="SecondGroup">
+            <div class="groupText">
+                <div class="title">Page</div>
+                <div class="group">
+                    <span>Home</span>
+                    <span>Menu</span>
+                    <span>Order online</span>
+                    <span>Catering</span>
+                    <span>Reservation</span>
+                </div>
+            </div>
+            <div class="groupText">
+                <div class="title">Information</div>
+                <div class="group">
+                    <span>About us</span>
+                    <span>Testimonial</span>
+                    <span>Event</span>
+                </div>
+            </div>
+            <div class="groupText">
+                <div class="title">Get in touch</div>
+                <div class="group">
+                    <span>3247 Johnson Ave, Bronx, NY<br>10463, Amerika Serikat</span>
+                    <span>delizioso@gmail.com</span>
+                    <span>+123 4567 8901</span>
+                    <span>Catering</span>
+                    <span>Reservation</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="TherdGroup">
+        <span>Copyright</span>
+        <div class="imgC">
+            <img src="../img/svg/Icon.svg" alt="">
+        </div>
+        <span>2022 Delizioso</span>
+    </div>
+</footer>
 </body>
 </html>
